src/core/web_contents_delegate_qt.h
@@ -205,6 +205,7 @@ private:
     QSharedPointer<WebContentsAdapter>
     createWindow(std::unique_ptr<content::WebContents> new_contents,
                  WindowOpenDisposition disposition, const gfx::Rect &initial_pos,
+                 const QUrl &url,
                  bool user_gesture);
     void EmitLoadStarted(const QUrl &url, bool isErrorPage = false);
     void EmitLoadFinished(bool success, const QUrl &url, bool isErrorPage = false, int errorCode = 0, const QString &errorDescription = QString());
